fix : minsiklee - Heap

--- a/ms/04_HeapT.ipynb
+++ b/ms/04_HeapT.ipynb
@@ -39,6 +39,8 @@
     "# 테스트 4 〉\t통과 (155.55ms, 15MB)\n",
     "# 테스트 5 〉\t통과 (2069.75ms, 51.9MB)\n",
     "\n",
+    "# https://www.daleseo.com/python-heapq/\n",
+    "\n",
     "\n",
     "import heapq\n",
     "\n",
@@ -78,6 +80,255 @@
    ],
    "source": [
     "solution([1, 2, 3, 9, 10, 12], 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "10//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code description ***\n",
+    "# Author : minsik.lee\n",
+    "# FileName : 04_HeapT.py\n",
+    "# Note \n",
+    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (3)\n",
+    "\t# @version 1.0 : (2021-01-02) draft\n",
+    "    \n",
+    "    # (1) 빈 작업이 있을 수 있다는 것도 고려! \n",
+    "\n",
+    "    # ticket_time : 1개의 요청이 들어온 시간\n",
+    "    # running_time : 1개의 작업이 수행되는 시간\n",
+    "    # finish_time : 1개의 작업이 완료된 시간\n",
+    "    # total_running_time : 작업 리스트들 하나하나가 작업 완료되는데, 걸린 시간 list\n",
+    "from collections import deque\n",
+    "import heapq\n",
+    "\n",
+    "def solution(jobs):\n",
+    "    \n",
+    "    jobs = deque(jobs)\n",
+    "\n",
+    "    total_time = sum([v for idx, v in jobs]) # 최종 완료 시간\n",
+    "    jobs_heap = [] # 작업 요청 리스트\n",
+    "    total_running_time = [] # total_running_time : 작업 리스트들 하나하나가 작업 완료되는데, 걸린 시간 list\n",
+    "    newtask_time = 0 # 신규 task가 진행되는 시간\n",
+    "    finish_time = 0  # finish_time : 1개의 작업이 완료된 시간 (최초 작업은 없으니 0)\n",
+    "\n",
+    "\n",
+    "    for current_time in range(total_time): \n",
+    "        print('current_time: ', current_time)\n",
+    "        print('jobs: ', jobs)\n",
+    "\n",
+    "        if jobs: # task가 있는 경우\n",
+    "            if jobs[0][0] <= current_time:\n",
+    "                _job = jobs.popleft()\n",
+    "                heapq.heappush(jobs_heap, _job[::-1]) # 작업 수행 시간 기준 정렬을 하기 위해서\n",
+    "\n",
+    "        if newtask_time == current_time: # 작업이 끝나는 시간\n",
+    "            _task = heapq.heappop(jobs_heap)\n",
+    "            ticket_time = _task[1] # ticket_time : 1개의 요청이 들어온 시간\n",
+    "            running_time = _task[0] # running_time : 1개의 작업이 수행되는 시간\n",
+    "            finish_time = current_time + running_time - ticket_time # finish_time : 1개의 작업이 완료된 시간\n",
+    "            newtask_time = current_time + running_time\n",
+    "\n",
+    "            total_running_time.append(finish_time)\n",
+    "            print(_task)\n",
+    "\n",
+    "        print(f\"{finish_time} - jobs_heap: {jobs_heap}\")\n",
+    "        print('total_running_time: ', total_running_time, '\\n')\n",
+    "    \n",
+    "    answer = sum(total_running_time)/len(total_running_time)\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code description ***\n",
+    "# Author : minsik.lee\n",
+    "# FileName : 04_HeapT.py\n",
+    "# Note \n",
+    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (3)\n",
+    "\t# @version 1.0 : (2021-01-02) draft\n",
+    "    \n",
+    "    # (1) 빈 작업이 있을 수 있다는 것도 고려! \n",
+    "\n",
+    "    # ticket_time : 1개의 요청이 들어온 시간\n",
+    "    # running_time : 1개의 작업이 수행되는 시간\n",
+    "    # finish_time : 1개의 작업이 완료된 시간\n",
+    "    # total_running_time : 작업 리스트들 하나하나가 작업 완료되는데, 걸린 시간 list\n",
+    "import heapq\n",
+    "\n",
+    "def solution(jobs):\n",
+    "    \n",
+    "    jobs_heap = [[x[1], x[0]] for x in jobs]\n",
+    "\n",
+    "    total_running_time = [] # total_running_time : 작업 리스트들 하나하나가 작업 완료되는데, 걸린 시간 list\n",
+    "    current_time = 0\n",
+    "\n",
+    "    heapq.heapify(jobs_heap) # heapq\n",
+    "\n",
+    "    while jobs_heap:\n",
+    "        _task = heapq.heappop(jobs_heap)\n",
+    "\n",
+    "        print(f\"current : {current_time}\")\n",
+    "        ticket_time = _task[1] # ticket_time : 1개의 요청이 들어온 시간\n",
+    "        running_time = _task[0] # running_time : 1개의 작업이 수행되는 시간\n",
+    "        finish_time = current_time + running_time - ticket_time # finish_time : 1개의 작업이 완료된 시간\n",
+    "        print(f\"ticket: {ticket_time}, running: {running_time}, finish: {finish_time}\")\n",
+    "        current_time = current_time + running_time\n",
+    "        total_running_time.append(finish_time)\n",
+    "        print(f\"change - current : {current_time} \\n \")\n",
+    "    \n",
+    "    answer = sum(total_running_time)/len(total_running_time)\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "current : 0\nticket: 0, running: 3, finish: 3\nchange - current : 3 \n \ncurrent : 3\nticket: 2, running: 6, finish: 7\nchange - current : 9 \n \ncurrent : 9\nticket: 1, running: 9, finish: 17\nchange - current : 18 \n \n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 164
+    }
+   ],
+   "source": [
+    "# code description ***\n",
+    "# Author : minsik.lee\n",
+    "# FileName : 04_HeapT.py\n",
+    "# Note \n",
+    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (3)\n",
+    "\t# @version 1.0 : (2021-01-05) https://seoyoung2.github.io/algorithm/2020/06/04/Programmers-diskcontroller.html\n",
+    "    # @version 2.0 : (2021-01-05) 내가 이해할 수 있는 주석으로 변경\n",
+    "\n",
+    "    # 결국에 키는 ticket_time, running_time 을 변경해서 heap 에 넣고 min 으로 추출 \n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "def solution(jobs):\n",
+    "    count, last, answer = 0, -1, 0\n",
+    "    heap = []\n",
+    "    jobs.sort()\n",
+    "    # 시작시간 초기화\n",
+    "    current_time = jobs[0][0]\n",
+    "    while count < len(jobs):\n",
+    "        for ticket_time, running_time in jobs:\n",
+    "            # ticket_time : 1개의 요청이 들어온 시간\n",
+    "            # running_time : 1개의 작업이 수행되는 시간\n",
+    "            if last < ticket_time <= current_time:\n",
+    "                # 작업 소요시간으로 min heap을 만들기 위해 (running_time, ticket_time) 푸시\n",
+    "                heapq.heappush(heap, (running_time, ticket_time))\n",
+    "        # 바로 수행할 수 있는 작업이 있는 경우\n",
+    "        if len(heap) > 0:\n",
+    "            count += 1\n",
+    "            last = current_time # 마지막으로 answer 입력된 task의 수행 시작 시점\n",
+    "            running_time_i, ticket_time_i = heapq.heappop(heap)\n",
+    "            current_time += running_time_i\n",
+    "            answer += (current_time - ticket_time_i)\n",
+    "        # 바로 수행할 수 있는 작업이 없는 경우\n",
+    "        else:\n",
+    "            current_time += 1\n",
+    "    return answer//len(jobs)\n",
+    "\n",
+    "\n",
+    "print(solution([[0, 3], [1, 9], [2, 6]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "import heapq\n",
+    "\n",
+    "topK = 10\n",
+    "item_score_dict = {'1': 3,'2':2,'3':5,'4':1, '8':3}\n",
+    "ranklist = heapq.nlargest(topK, item_score_dict, key=item_score_dict.get)"
    ]
   },
   {
