--- a/ms/04_HeapT.ipynb
+++ b/ms/04_HeapT.ipynb
@@ -10,7 +10,7 @@
     "# Author : minsik.lee\n",
     "# FileName : 04_HeapT.py\n",
     "# Note \n",
-    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (3)\n",
+    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (3) - 더 맵게 Q _ 1\n",
     "\t# @version 1.0 : (2020-12-29) draft\n",
     "\n",
     "# 실행 결과\n",
@@ -80,26 +80,6 @@
    ],
    "source": [
     "solution([1, 2, 3, 9, 10, 12], 7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
-   "source": [
-    "10//2"
    ]
   },
   {
@@ -276,110 +256,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code description ***\n",
+    "# Author : minsik.lee\n",
+    "# FileName : 04_HeapT.py\n",
+    "# Note \n",
+    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (3) Heap (3)\n",
+    "\t# @version 1.0 : (2021-01-13)\n",
     "\n",
+    "    # I : insert _ number\n",
+    "    # D : delete {max(n > 0), min(n < 0)}\n",
+    "\n",
+    "# coding sketch\n",
+    "# (1) 기본 I/D 부터 만들기\n",
+    "#       min heap 으로 정렬\n",
+    "#       max 구하는 방식 \n",
+    "# (2) return \n",
+    "#       비어있는 경우 \n",
+    "#       최대,최소 반환 경우\n",
+    "\n",
+    "\n",
+    "# 채점을 시작합니다.\n",
+    "# 정확성  테스트\n",
+    "# 테스트 1 〉\t통과 (0.04ms, 10.4MB)\n",
+    "# 테스트 2 〉\t통과 (0.03ms, 10.3MB)\n",
+    "# 테스트 3 〉\t통과 (0.04ms, 10.4MB)\n",
+    "# 테스트 4 〉\t통과 (0.03ms, 10.3MB)\n",
+    "# 테스트 5 〉\t통과 (0.03ms, 10.4MB)\n",
+    "# 테스트 6 〉\t통과 (0.03ms, 10.4MB)\n",
+    "# 채점 결과\n",
+    "# 정확성: 100.0\n",
+    "# 합계: 100.0 / 100.0\n",
     "\n",
     "import heapq\n",
     "\n",
-    "topK = 10\n",
-    "item_score_dict = {'1': 3,'2':2,'3':5,'4':1, '8':3}\n",
-    "ranklist = heapq.nlargest(topK, item_score_dict, key=item_score_dict.get)"
+    "def solution(operations):    \n",
+    "    heap = []\n",
+    "\n",
+    "    for operation_i in operations:\n",
+    "        # operator 연산자\n",
+    "        # number action하는 숫자 \n",
+    "        operator, number = operation_i.split() \n",
+    "        number = int(number)\n",
+    "        # D/I 연산 \n",
+    "        if operator == 'I':\n",
+    "            heapq.heappush(heap, number)\n",
+    "        elif len(heap) > 0 : # delete\n",
+    "            if number < 0:\n",
+    "                heapq.heappop(heap)\n",
+    "            else: # max heap\n",
+    "                maxN = heapq.nlargest(1, heap)[0] # 최대 값 반환\n",
+    "                heap.pop(heap.index(maxN)) # 최대 값의 index 삭제 (list)\n",
+    "        else: # delete - empty heap\n",
+    "            pass\n",
+    "\n",
+    "    if len(heap) == 0:\n",
+    "        return [0, 0]\n",
+    "    else:\n",
+    "        minN = heap[0]\n",
+    "        maxN = maxN = heapq.nlargest(1, heap)[0] \n",
+    "        return [maxN, minN]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test case\n",
+    "operations = [\"I 16\", \"D 1\"] #\t[0,0]\n",
+    "operations = [\"I 7\",\"I 5\",\"I -5\",\"D -1\"]\t# [7,5]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 3, 7, 4]\n1\n[3, 4, 7]\n3\nNone\n"
+      "[-5, 7, 5]\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[7, 5]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
     }
    ],
    "source": [
-    "## example code\n",
-    "# https://www.daleseo.com/python-heapq/\n",
-    "import heapq\n",
-    "heap = []\n",
-    "\n",
-    "## pop\n",
-    "heapq.heappush(heap, 4) # heappush() : O(logN)\n",
-    "heapq.heappush(heap, 1)\n",
-    "heapq.heappush(heap, 7)\n",
-    "heapq.heappush(heap, 3)\n",
-    "print(heap)\n",
-    "\n",
-    "## push\n",
-    "print(heapq.heappop(heap)) # heappop() : O(logN)\n",
-    "print(heap)\n",
-    "\n",
-    "print(heap[0])\n",
-    "\n",
-    "heap = [4, 1, 7, 3, 8, 5]\n",
-    "heapq.heapify(heap)\n",
-    "print(heap)"
+    "solution(operations)"
    ]
   },
   {
@@ -388,55 +365,205 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[1, 3, 5, 4, 8, 7]\n"
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-38-bcd0b2e5e8ec>, line 22)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-bcd0b2e5e8ec>\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    return [0, 0]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
    "source": [
-    "heap = [4, 1, 7, 3, 8, 5]\n",
-    "heapq.heapify(heap)\n",
-    "print(heap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[1, 3, 5, 4, 8, 7, 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "heapq.heappush(heap, 6)\n",
-    "print(heap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "7\n[8]\n"
-     ]
-    }
-   ],
-   "source": [
+    "import heapq\n",
+    "heap = []\n",
     "\n",
-    "## push\n",
-    "print(heapq.heappop(heap)) # heappop() : O(logN)\n",
-    "print(heap)"
+    "for operation_i in operations:\n",
+    "    # operator 연산자\n",
+    "    # number action하는 숫자 \n",
+    "    operator, number = operation_i.split() \n",
+    "    # D/I 연산 \n",
+    "    if operator == 'I':\n",
+    "        heapq.heappush(heap, number)\n",
+    "    elif len(heap) > 0 : # delete\n",
+    "        number = int(number)\n",
+    "        if number < 0:\n",
+    "            heapq.heappop(heap)\n",
+    "        else: # max heap\n",
+    "            maxN = heapq.nlargest(1, heap)[0] # 최대 값 반환\n",
+    "            heap.pop(heap.index(maxN)) # 최대 값의 index 삭제 (list)\n",
+    "    else: # delete - empty heap\n",
+    "        pass\n",
+    "\n",
+    "if len(heap) == 0:\n",
+    "    return [0, 0]\n",
+    "else:\n",
+    "    minN = heap[0]\n",
+    "    maxN = maxN = heapq.nlargest(1, heap)[0] \n",
+    "    return [maxN, minN]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['16']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 4, 2, 13, 6]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "heap = []\n",
+    "heapq.heappush(heap, 0)\n",
+    "heapq.heappush(heap, 13)\n",
+    "heapq.heappush(heap, 2)\n",
+    "heapq.heappush(heap, 4)\n",
+    "heapq.heappush(heap, 6)\n",
+    "\n",
+    "\n",
+    "heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 4, 2, 6]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "maxN = heapq.nlargest(1, heap)[0]\n",
+    "heap.pop(heap.index(maxN))\n",
+    "heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 4, 2, 13, 6]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[4, 13, 6]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "heapq.heappop(heap)\n",
+    "heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "heap.index(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "pop index out of range",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-861482cd283b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mheap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: pop index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "heap.pop(6)"
    ]
   }
  ],
