fix: 테스트 코드 추가

--- a/sj/heap.ipynb
+++ b/sj/heap.ipynb
@@ -48,6 +48,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'heappop'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-239-a9ab0ff9f529>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mheapq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheappush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheap\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mheap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheappop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'heappop'"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "heap = []\n",
+    "heapq.heappush(heap, 40)\n",
+    "heapq.heappush(heap, 20)\n",
+    "heapq.heappush(heap, 10)\n",
+    "heapq.heappush(heap, 50)\n",
+    "\n",
+    "heap.heappop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -296,8 +324,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import heapq\n",
+    "\n",
     "def solution(scoville, K):\n",
+    "    import heapq\n",
     "    \n",
     "    # heap 구조로 만들어주기\n",
     "    heapq.heapify(scoville)\n",
@@ -519,7 +548,7 @@
     "t = jobs.pop(0)\n",
     "time = jobs[0][1]\n",
     "runtime = t[1]\n",
-    "print(\"현재 시간:\", t[1]) # 현재 시간\n",
+    "print(\"현재 시간:\", t[1]) # 현재 시간~~\n",
     "print(\"남은 작업:\", jobs) # 남은 작업\n",
     "print(\"요청부터 작업시간까지 걸린 시간:\", runtime)\n",
     "\n",
