--- a/ms/06_Search.ipynb
+++ b/ms/06_Search.ipynb
@@ -8,79 +8,92 @@
    "source": [
     "# code description ***\n",
     "# Author : minsik.lee\n",
-    "# FileName : 04_HeapT.py\n",
+    "# FileName : 05_ExhaustiveSearch.py\n",
     "# Note \n",
-    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (3) - 더 맵게 Q _ 1\n",
-    "\t# @version 1.0 : (2020-12-29) draft\n",
+    "\t# @Summary : 코딩테스트 - 프로그래머스 Question (5) - 더 맵게 모의고사\n",
+    "\t# @version 1.0 : (2021-01-22) draft\n",
     "\n",
-    "# 실행 결과\n",
-    "# 채점을 시작합니다.\n",
-    "# 정확성  테스트\n",
-    "# 테스트 1 〉\t통과 (0.01ms, 10.2MB)\n",
+    "\n",
+    "# 테스트 1 〉\t통과 (0.02ms, 10.3MB)\n",
     "# 테스트 2 〉\t통과 (0.01ms, 10.2MB)\n",
-    "# 테스트 3 〉\t통과 (0.01ms, 10.2MB)\n",
+    "# 테스트 3 〉\t통과 (0.01ms, 10.3MB)\n",
     "# 테스트 4 〉\t통과 (0.01ms, 10.3MB)\n",
-    "# 테스트 5 〉\t통과 (0.01ms, 10.2MB)\n",
-    "# 테스트 6 〉\t통과 (0.79ms, 10.3MB)\n",
-    "# 테스트 7 〉\t통과 (0.81ms, 10.2MB)\n",
-    "# 테스트 8 〉\t통과 (0.10ms, 10.2MB)\n",
-    "# 테스트 9 〉\t통과 (0.07ms, 10.2MB)\n",
-    "# 테스트 10 〉\t통과 (0.58ms, 10.2MB)\n",
-    "# 테스트 11 〉\t통과 (0.51ms, 10.2MB)\n",
-    "# 테스트 12 〉\t통과 (1.21ms, 10.2MB)\n",
-    "# 테스트 13 〉\t통과 (0.80ms, 10.2MB)\n",
-    "# 테스트 14 〉\t통과 (0.02ms, 10.1MB)\n",
-    "# 테스트 15 〉\t통과 (0.94ms, 10.2MB)\n",
-    "# 테스트 16 〉\t통과 (0.01ms, 10.3MB)\n",
-    "# 효율성  테스트\n",
-    "# 테스트 1 〉\t통과 (192.80ms, 16.4MB)\n",
-    "# 테스트 2 〉\t통과 (417.59ms, 22MB)\n",
-    "# 테스트 3 〉\t통과 (1918.72ms, 49.8MB)\n",
-    "# 테스트 4 〉\t통과 (155.55ms, 15MB)\n",
-    "# 테스트 5 〉\t통과 (2069.75ms, 51.9MB)\n",
-    "\n",
-    "# https://www.daleseo.com/python-heapq/\n",
+    "# 테스트 5 〉\t통과 (0.04ms, 10.3MB)\n",
+    "# 테스트 6 〉\t통과 (0.04ms, 10.3MB)\n",
+    "# 테스트 7 〉\t통과 (2.47ms, 10.3MB)\n",
+    "# 테스트 8 〉\t통과 (0.66ms, 10.4MB)\n",
+    "# 테스트 9 〉\t통과 (4.26ms, 10.3MB)\n",
+    "# 테스트 10 〉\t통과 (2.06ms, 10.3MB)\n",
+    "# 테스트 11 〉\t통과 (4.49ms, 10.3MB)\n",
+    "# 테스트 12 〉\t통과 (4.08ms, 10.3MB)\n",
+    "# 테스트 13 〉\t통과 (0.81ms, 10.2MB)\n",
+    "# 테스트 14 〉\t통과 (4.73ms, 10.3MB)\n",
     "\n",
     "\n",
-    "import heapq\n",
     "\n",
-    "def scoville_score(a1, a2):\n",
-    "    return a1 + a2*2\n",
+    "def solution(answers):\n",
+    "    # Rule of man\n",
+    "    p1 = [1, 2, 3, 4, 5]\n",
+    "    p2 = [2, 1, 2, 3, 2, 4, 2, 5]\n",
+    "    p3 = [3, 3, 1, 1, 2, 2, 4, 4, 5, 5]\n",
     "\n",
-    "def solution(scoville, K):\n",
+    "    # How many answer correct\n",
+    "    count = {\n",
+    "        1 : 0,\n",
+    "        2 : 0,\n",
+    "        3 : 0\n",
+    "    }\n",
     "\n",
-    "    step = 0\n",
-    "    heapq.heapify(scoville) # heapq\n",
-    "    while scoville[0] < K:\n",
-    "        if len(scoville) == 1: # case length(1) => scoville > K\n",
-    "            return -1\n",
-    "        step += 1\n",
-    "        f1 = heapq.heappop(scoville)\n",
-    "        f2 = heapq.heappop(scoville)\n",
-    "        new_f = scoville_score(f1, f2)\n",
-    "        heapq.heappush(scoville, new_f) # auto sort (min - max)\n",
-    "    return step\n"
+    "    # 정답지 loop\n",
+    "    p1_len = 5\n",
+    "    p2_len = 8\n",
+    "    p3_len = 10\n",
+    "\n",
+    "    for i in range(len(answers)): # for idx, answer in enumerate(answers):\n",
+    "\n",
+    "        idx1 = i%p1_len\n",
+    "        idx2 = i%p2_len\n",
+    "        idx3 = i%p3_len\n",
+    "\n",
+    "        answer_i = answers[i]\n",
+    "\n",
+    "        # True : 1, False : 2\n",
+    "        count[1] += (answer_i == p1[idx1])\n",
+    "        count[2] += (answer_i == p2[idx2])\n",
+    "        count[3] += (answer_i == p3[idx3])\n",
+    "\n",
+    "    answer = [k for k, v in count.items() if v == max(count.values())]\n",
+    "    \n",
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "solution([1, 2, 3, 9, 10, 12], 7)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
