--- a/sj/exhaustive_search.ipynb
+++ b/sj/exhaustive_search.ipynb
@@ -98,13 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check(n) : \n",
     "    \"\"\"\n",
     "    소수인지 확인하는 함수\n",
+    "\n",
+    "    arg\n",
+    "        prd_no: 상품번호\n",
+    "    ouput\n",
+    "        T/F: 소수여부\n",
     "    \"\"\"\n",
     "    if n < 2 :\n",
     "        return False\n",
@@ -114,6 +119,15 @@
     "            return False\n",
     "\n",
     "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check()"
    ]
   },
   {
