--- a/sj/dfs_bfs.ipynb
+++ b/sj/dfs_bfs.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
       "text/plain": "True"
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 22
     }
    ],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
       "text/plain": "{'hot'}"
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 24
     }
    ],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
       "text/plain": "{'hit': {'hot'}}"
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 27
     }
    ],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -461,7 +461,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "{'hit': {'hot'}, 'hot': {'lot', 'dot'}, 'dot': {'hot', 'dog', 'lot'}, 'dog': {'cog', 'log', 'dot'}, 'lot': {'hot', 'log', 'dot'}, 'log': {'cog', 'lot', 'dog'}, 'cog': {'log', 'dog'}}\n"
+     "text": "{'hit': {'hot'}, 'hot': {'dot', 'lot'}, 'dot': {'hot', 'lot', 'dog'}, 'dog': {'dot', 'cog', 'log'}, 'lot': {'dot', 'hot', 'log'}, 'log': {'cog', 'lot', 'dog'}, 'cog': {'log', 'dog'}}\n"
     }
    ],
    "source": [
@@ -474,19 +474,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "최초 큐 형태: deque([('hit', 0)])\n"
+     "output_type": "error",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'queue' from 'queue' (/Users/tf-mac-075/opt/anaconda3/envs/programmers_izik/lib/python3.8/queue.py)",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-40dffae416e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 단어를 알파벳 하나씩 바꿔가면서 큐에 저장\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mqueue\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mqueue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqueue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbegin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'최초 큐 형태: {q}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'queue' from 'queue' (/Users/tf-mac-075/opt/anaconda3/envs/programmers_izik/lib/python3.8/queue.py)"
+     ]
     }
    ],
    "source": [
     "# 단어를 알파벳 하나씩 바꿔가면서 큐에 저장\n",
+    "from queue import queue\n",
     "q = queue()\n",
     "q.append((begin,0))\n",
     "print(f'최초 큐 형태: {q}')"
@@ -654,7 +661,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1613920713180",
+   "name": "python_defaultSpec_1613974096595",
    "display_name": "Python 3.8.5 64-bit ('programmers_izik': conda)"
   }
  },
